--- a/wp-content/themes/calidra/assets/css/scss/mixins.scss
+++ b/wp-content/themes/calidra/assets/css/scss/mixins.scss
@@ -18,6 +18,7 @@
     font-size: 1.5rem;
     line-height: 1.5rem;
     text-transform: uppercase;
+    cursor: pointer;
     @include minWidth(1024px){
         font-size: 2rem;
         line-height: 2rem;
