--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -984,87 +984,6 @@ footer{
             margin-bottom: 50px;
         }
     }
-    &-localizador{
-        background: url(../img/seccion_template/localizador_back.jpg) top center no-repeat;
-        background-size: cover;
-        color: #ffffff;
-        padding-top: 80px;
-        text-align: center;
-        @include fullWidthSection();
-        &-cta{
-            display: inline-block;
-            text-align: left;
-            h3{
-                font-family: $century;
-                @include fontLine(3rem, 3.5rem);
-                margin-bottom: 20px;
-            }
-            p{
-                font-family: $lato;
-                margin-bottom: 30px;
-            }
-        }
-        button{
-            @include standardButton($ultra-dark-grey, #ffffff);
-        }
-    }
-    &-videos{
-        h3{
-            @include fontLine(4rem, 4rem);
-            font-weight: bold;
-            @include minWidth($lg){
-                @include fontLine(5rem, 5rem);
-            }
-            font-family: $century;
-            color: $grey;
-            margin: 50px 0;
-        }
-        .video-cont{
-            width: 100%;
-            position: relative;
-            background: url(../img/seccion_template/video.jpg) center center no-repeat;
-            background-size: cover;
-            &.video-big{
-                height: 500px;
-            }
-            &.video-small{
-                height: 245px;
-                &:first-child{
-                    margin-bottom: 10px;
-                }
-            }
-            .black-screen{
-              position: absolute;
-              background-color: rgba(0, 0, 0, 0.5);
-              width: 100%;
-              height: 100%;
-              top: 0;
-              left: 0;
-              .play-button{
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: 100px;
-                height: 100px;
-                background-color: red;
-                border-radius: 100%;
-                .play-arrow{
-                    box-sizing: border-box;
-                    width: 44px;
-                    height: 44px;
-                    border-style: solid;
-                    border-width: 22px 0 22px 44px;
-                    border-color: transparent transparent transparent #ffffff;
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-40%, -50%);
-                }
-              }
-            }
-          }
-    }
 }
 .localizador{
     padding-top: 50px;
@@ -1318,6 +1237,89 @@ footer{
         button{
             @include standardButton($calidra-red, #ffffff);
             margin: 50px 0;
+        }
+    }
+}
+
+.template-localizador{
+    background: url(../img/seccion_template/localizador_back.jpg) top center no-repeat;
+    background-size: cover;
+    color: #ffffff;
+    padding-top: 80px;
+    text-align: center;
+    @include fullWidthSection();
+    &-cta{
+        display: inline-block;
+        text-align: left;
+        h3{
+            font-family: $century;
+            @include fontLine(3rem, 3.5rem);
+            margin-bottom: 20px;
+        }
+        p{
+            font-family: $lato;
+            margin-bottom: 30px;
+        }
+    }
+    button{
+        @include standardButton($ultra-dark-grey, #ffffff);
+    }
+}
+.template-videos{
+    padding-bottom: 80px;
+    h3{
+        @include fontLine(4rem, 4rem);
+        font-weight: bold;
+        @include minWidth($lg){
+            @include fontLine(5rem, 5rem);
+        }
+        font-family: $century;
+        color: $grey;
+        margin: 50px 0;
+    }
+    .video-cont{
+        width: 100%;
+        position: relative;
+        background: url(../img/seccion_template/video.jpg) center center no-repeat;
+        background-size: cover;
+        &.video-big{
+            height: 500px;
+        }
+        &.video-small{
+            height: 245px;
+            &:first-child{
+                margin-bottom: 10px;
+            }
+        }
+        .black-screen{
+          position: absolute;
+          background-color: rgba(0, 0, 0, 0.5);
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          .play-button{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100px;
+            height: 100px;
+            background-color: red;
+            border-radius: 100%;
+            .play-arrow{
+                box-sizing: border-box;
+                width: 44px;
+                height: 44px;
+                border-style: solid;
+                border-width: 22px 0 22px 44px;
+                border-color: transparent transparent transparent #ffffff;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-40%, -50%);
+            }
+          }
         }
     }
 }
