--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -972,6 +972,8 @@ footer{
         }
     }
     &-productos{
+        @include especificContainer(1200px);
+        padding: 0 0 50px;
         h3{
             text-align: center;
             @include fontLine(4rem, 4rem);
@@ -981,7 +983,57 @@ footer{
             }
             font-family: $century;
             color: $grey;
-            margin-bottom: 50px;
+            margin-bottom: 80px;
+        }
+        &-cont{
+            border: 1px solid $grey;
+            display: flex;
+            flex-direction: column;
+            &-image{
+                padding: 20px;
+            }
+            &-text{
+                color: #ffffff;
+                background-color: $ultra-dark-grey;
+                padding: 50px 15px 15px;
+                flex: 1;
+                position: relative;
+                h4{
+                    font-family: $century;
+                    font-style: italic;
+                    @include fontLine(2.5rem, 2.5rem);
+                    margin-bottom: 20px;
+                }
+                p{
+                    font-family: $lato;
+                    text-align: justify;
+                }
+                &-mas{
+                    background-color: rgba($color: $calidra-red, $alpha: .7);
+                    border-radius: 100%;
+                    width: 80px;
+                    height: 80px;
+                    position: absolute;
+                    top: -10px;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    span{
+                        display: block;
+                        width: 50%;
+                        height: 5px;
+                        border-radius: 3px;
+                        background-color: #ffffff;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        &:nth-of-type(2){
+                            width: 5px;
+                            height: 50%;
+                        }
+                    }
+                }
+            }
         }
     }
 }
